fix(cafe) fix z-index

--- a/style.css
+++ b/style.css
@@ -502,3 +502,7 @@ body {
 ::-webkit-scrollbar-thumb {
   background: #888;
 }
+
+nav.affix {
+  z-index: 1000;
+}
